fix(favorites): fix align styles for film details view

--- a/app/styles/_toolbar.scss
+++ b/app/styles/_toolbar.scss
@@ -10,6 +10,10 @@
       }
     }
   }
+  &.fix-right-align,
+  .fix-right-align &{
+    padding-right: 0
+  }
   /**
    * Fix label position when floating
    */
